# PixelTerm

./: LICENSE  README.md  README_zh.md  chafa_wrapper.py  config.py  constants.py  exceptions.py  file_browser.py  image_viewer.py  interface.py  pixelterm  pixelterm.py  pyproject.toml  requirements.txt
